test/Fail/AttributeUnparenthesized.agda
-- Andreas, 2018-06-09, issue #2513, parsing attributes

postulate
  fail : ∀ @0 A → A → A

-- Should fail.
