test/Fail/AttributeUnparenthesized.err
AttributeUnparenthesized.agda:4,12-12
AttributeUnparenthesized.agda:4,12: Parse error
@<ERROR>
0 A → A → A

-- Should fail.
...
